2006-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tclWinFile.c: Backported fix for bug #1420432 (cannot set 
	* tests/cmdAH.test: mtime for directories on windows).

2006-09-30  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclUtil.c (Tcl_SplitList): optimisation, [Patch 1344747]
	by dgp.

2006-09-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:  Updated MSVC build to properly deal with
	* win/nmakehlp.c:   MSVC8 and AMD64 target. Backport from 8.5
	* win/rules.vc:
	* generic/tcl.h:    Fixed stat definition for MSVC8 AMD64.
	* win/tclWinSock.c: Casting type police.
	* win/tclWinTime.c:

2006-09-26  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h:	As 2006-09-22 commit from Donal K. Fellows
	demonstrates, "#define NULL 0" is just wrong, and as a quotable chat
	figure observed, "If NULL isn't defined, we're not using a C compiler."
	Improper fallback definition of NULL removed.

2006-09-25  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (Tcl_StackChannel): Fixed [SF Tcl Bug 1564642],
	  aka coverity #51. Extended loop condition, added checking for
	  NULL to prevent seg.fault.

2006-09-25  Andreas Kupries <andreask@activestate.com>

	* generic/tclBasic.c: Reverted exposure of patchlevel in
	  registered core version when TIP#268 features are
	  activated. Better compatibility with existing packages.
	  Like Tk.

2006-09-24  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclParse.c (Tcl_ParseCommand): also return an error if 
	start==NULL and numBytes<0. This is coverity's bug #20

	* generic/tclStringObj.c (STRING_SIZE): fix allocation for
	0-length strings. This is coverity's bugs #54-5
	
2006-09-22  Andreas Kupries  <andreask@activestate.com>

	* generic/tclInt.h: Moved TIP#268's field 'packagePrefer' to the
	  end of the structure, for better backward compatibility.

2006-09-22  Andreas Kupries <andreask@activestate.com>

	* generic/tclPkg.c (Tcl_PkgRequireEx): Changes handling of the